Changelog
=========


1.5.3 (unreleased)
------------------

- Nothing changed yet.


1.5.2 (2014-07-31)
------------------

- BugFix: Show "related_items" instead of "relatedItems" in meeting item listing.
  [mathias.leimgruber]

- Also export references of meeting item on zip export on a meeting.
  [mathias.leimgruber]


1.5.1 (2014-07-04)
------------------

- Fix save_as_pdf view. _parent seems to be an existing method with security declaration.
  [mathias.leimgruber]

- Add special preview View for ftw.workspace preview.
  [tschanzt]

- Don't allow file upload.
  [tschanzt]


1.5.0 (2014-06-24)
------------------

- 1.4.10 was meant to be a feature release, since it has some features included.
  So this is the new feature release.
  [mathias.leimgruber]

- Ignore removed users in PDF.
  [jone]

- Fix ftw.zipexport integration: make it optional on ZCML level.
  [jone]


1.4.10 (2014-06-10)
-------------------

- Add zipexport for meetings
  [elioschmutz]

- Add functionality to save meeting as pdf without downloading it.
  [elioschmutz]


1.4.9 (2014-03-20)
------------------

- Increase height of meeting item fields.
  [jone]


1.4.8 (2014-02-10)
------------------

- Update French translations.
  [tschanzt]


1.4.7 (2013-11-20)
------------------

- Fix getting related tasks on for task latex listing.
  [mathias.leimgruber]


1.4.6 (2013-11-18)
------------------

- Fix PDF rendering of meeting item's related items.
  Remove manually footnotes with \url and use standard <a> tag converter.
  [jone]


1.4.5 (2013-11-15)
------------------

- Rewrite meeting latex view tests (No mocking anymore).
  [mathias.leimgruber]

- Plone 4.3 compatibility (imports and jQuery).
  [mathias.leimgruber]

- BugFix: meetingitem listing use getURL instead of absolute_url.
  ContentRelatedItems returns brains.
  [mathias.leimgruber]

- BugFix: also apply the prev. fix for the meetingitem.
  [mathias.leimgruber]

- BugFix: meeting latex shows id instead of fullname.