@@ -28,6 +28,15 @@
 }
 </%block>
 
+% if relatedItems:
+  \subsection*{${_(u"latex_related_items", default=u"Related Items")}:}
+  \begin{itemize}
+  % for item in relatedItems:
+    \item{${item}}
+  % endfor
+  \end{itemize}
+% endif
+
 <%block name="content">
 ${latex_content}
 </%block>
