@@ -5,7 +5,8 @@ Changelog
 1.5.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Render the related items of meeting objects.
+  [mbaechtold]
 
 
 1.5.2 (2014-07-31)
